--- a/packages/slate-react/package.json
+++ b/packages/slate-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slate-react",
+  "name": "slate-react-legacy",
   "description": "A set of React components for building completely customizable rich-text editors.",
   "version": "0.13.1",
   "license": "MIT",
