--- a/packages/slate-react/package.json
+++ b/packages/slate-react/package.json
@@ -28,7 +28,8 @@
     "slate-dev-logger": "^0.1.39",
     "slate-hotkeys": "^0.1.2",
     "slate-plain-serializer": "^0.5.18",
-    "slate-prop-types": "^0.4.35"
+    "slate-prop-types": "^0.4.35",
+    "webpack": "^4.44.2"
   },
   "peerDependencies": {
     "immutable": ">=3.8.1",
