--- a/packages/slate-react/package.json
+++ b/packages/slate-react/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "slate-react",
+  "name": "slate-react-legacy",
   "description": "A set of React components for building completely customizable rich-text editors.",
-  "version": "0.13.2",
+  "version": "0.13.3",
   "license": "MIT",
   "repository": "git://github.com/ianstormtaylor/slate.git",
   "main": "lib/slate-react.js",
@@ -46,7 +46,8 @@
   },
   "scripts": {
     "clean": "rm -rf ./dist ./lib ./node_modules",
-    "release:legacy": "node ./slate-legacy-prepublish.js && npm publish --access public && node ./slate-legacy-postpublish.js"
+    "prepublish": "node ./slate-legacy-prepublish.js",
+    "postpublish": "node ./slate-legacy-postpublish.js"
   },
   "umdGlobals": {
     "immutable": "Immutable",
