--- a/packages/slate-react/package.json
+++ b/packages/slate-react/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "slate-react-legacy",
+  "name": "slate-react",
   "description": "A set of React components for building completely customizable rich-text editors.",
-  "version": "0.13.3",
+  "version": "0.13.4",
   "license": "MIT",
   "repository": "git://github.com/ianstormtaylor/slate.git",
   "main": "lib/slate-react.js",
