--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "lint": "eslint packages/*/src packages/*/test examples/*/*.js examples/dev/*/*.js && prettier --list-different '**/*.{js,jsx,md,json,css}'",
     "open": "open http://localhost:8080",
     "prettier": "prettier --write '**/*.{js,jsx,md,json,css}'",
-    "release": "echo 'RUN THIS TO RELEASE `slate-react-legacy`: cd ./packages/slate-react && yarn release:legacy'",
+    "release": "echo 'RUN THIS TO RELEASE `slate-react-legacy`: cd ./packages/slate-react && yarn release'",
     "server": "webpack-dev-server --config ./support/webpack/config.js",
     "start": "npm-run-all --parallel --print-label watch server",
     "test": "cross-env BABEL_ENV=test mocha --require babel-core/register ./packages/*/test/index.js",
